修改首页显示样式

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	<link href="./css/common/bootstrap.min.css" rel="stylesheet">
 	<link href="./css/common/font-awesome.min.css" rel="stylesheet">
 	<link href="./css/mystyle.css" rel="stylesheet">
+<!-- 	<link href="./css/common/katex.min.css" rel="stylesheet"> -->
 
 	<script src="./js/common/jquery-3.2.1.min.js"></script>
 	<script src="./js/common/bootstrap.min.js"></script>
+<!-- 	<script src="./js/common/kate.min.js"></script> -->
 
 	<!--markdown-->
 	<link rel="stylesheet" href="./editor.md/css/editormd.preview.min.css" />
